--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.0",
     "install": "^0.13.0",
     "jquery": "^3.6.0",
+    "materialize-css": "^1.0.0",
     "npm": "^7.20.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
